Hiding follow and unfollow link from profile page

--- a/public/project-next/client/views/users/followers.view.html
+++ b/public/project-next/client/views/users/followers.view.html
@@ -38,19 +38,19 @@
                 <div class="col-sm-3">
                     <p><img src="//placehold.it/100" class="avatar img-circle" alt="avatar"></p>
 
-                    <a ng-if="followersControllerModel.isfollowed ||
-                    followersControllerModel.currentUser.following.indexOf(follower._id)< 0" href=""
-                       ng-click="followersControllerModel.followUser(follower._id)">
-                        <p>Follow</p>
-                    </a>
-                    <a ng-if="followersControllerModel.isfollowed ||
-                    followersControllerModel.currentUser.following.indexOf(follower._id)> -1" href=""
-                       ng-click="followersControllerModel.unFollowUser(follower._id)">
-                        <p class="orangecolor">UnFollow</p>
-                    </a>
+                    <!--<a ng-if="followersControllerModel.isfollowed ||-->
+                    <!--followersControllerModel.currentUser.following.indexOf(follower._id)< 0" href=""-->
+                       <!--ng-click="followersControllerModel.followUser(follower._id)">-->
+                        <!--<p>Follow</p>-->
+                    <!--</a>-->
+                    <!--<a ng-if="followersControllerModel.isfollowed ||-->
+                    <!--followersControllerModel.currentUser.following.indexOf(follower._id)> -1" href=""-->
+                       <!--ng-click="followersControllerModel.unFollowUser(follower._id)">-->
+                        <!--<p class="orangecolor">UnFollow</p>-->
+                    <!--</a>-->
                 </div>
                 <div class="col-sm-6">
-                    <p>{{follower.firstName}}&nbsp{{follower.lastName}}</p>
+                    <a href="#/{{follower._id}}/view/profile"><p>{{follower.firstName}}&nbsp{{follower.lastName}}</p></a>
                 </div>
             </div>
         </div>
