--- a/public/project-next/client/views/users/followers.view.html
+++ b/public/project-next/client/views/users/followers.view.html
@@ -38,16 +38,14 @@
                 <div class="col-sm-3">
                     <p><img src="//placehold.it/100" class="avatar img-circle" alt="avatar"></p>
 
-                    <!--<a ng-if="followersControllerModel.isfollowed ||-->
-                    <!--followersControllerModel.currentUser.following.indexOf(follower._id)< 0" href=""-->
-                       <!--ng-click="followersControllerModel.followUser(follower._id)">-->
-                        <!--<p>Follow</p>-->
-                    <!--</a>-->
-                    <!--<a ng-if="followersControllerModel.isfollowed ||-->
-                    <!--followersControllerModel.currentUser.following.indexOf(follower._id)> -1" href=""-->
-                       <!--ng-click="followersControllerModel.unFollowUser(follower._id)">-->
-                        <!--<p class="orangecolor">UnFollow</p>-->
-                    <!--</a>-->
+                    <a ng-hide="follower.isFollowed" href=""
+                       ng-click="followersControllerModel.followUser(follower)">
+                        <i title="Follow" class="fa fa-user-plus fa-lg"></i>
+                    </a>
+                    <a ng-if="follower.isFollowed" href=""
+                       ng-click="followersControllerModel.unFollowUser(follower)">
+                        <i title="UnFollow" class="fa fa-user-plus fa-lg orangecolor"></i>
+                    </a>
                 </div>
                 <div class="col-sm-6">
                     <a href="#/{{follower._id}}/view/profile"><p>{{follower.firstName}}&nbsp{{follower.lastName}}</p></a>
