--- a/public/project-next/client/views/search/searchresult.view.html
+++ b/public/project-next/client/views/search/searchresult.view.html
@@ -1,27 +1,27 @@
 <!--<div class="container">-->
-    <!--<h3>Search Results</h3>-->
-    <!--<div class="table-responsive" ng-controller="SearchController">-->
-        <!--<table class="table table-striped">-->
-            <!--<thead>-->
-            <!--<tr>-->
-                <!--<th>Restaurant ID</th>-->
-                <!--<th>Name</th>-->
-                <!--<th>Ratings</th>-->
-                <!--<th>Image</th>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tbody>-->
-            <!--<tr ng-repeat="rest in data.businesses">-->
-                <!--<td>{{rest.id}}</td>-->
-                <!--<td>-->
-                    <!--<a href="#/detail/{{rest.id}}">{{rest.name}}</a>-->
-                <!--</td>-->
-                <!--<td><img ng-src="{{rest.rating_img_url}}"/></td>-->
-                <!--<td><img ng-src="{{rest.image_url}}"/></td>-->
-            <!--</tr>-->
-            <!--</tbody>-->
-        <!--</table>-->
-    <!--</div>-->
+<!--<h3>Search Results</h3>-->
+<!--<div class="table-responsive" ng-controller="SearchController">-->
+<!--<table class="table table-striped">-->
+<!--<thead>-->
+<!--<tr>-->
+<!--<th>Restaurant ID</th>-->
+<!--<th>Name</th>-->
+<!--<th>Ratings</th>-->
+<!--<th>Image</th>-->
+<!--</tr>-->
+<!--</thead>-->
+<!--<tbody>-->
+<!--<tr ng-repeat="rest in data.businesses">-->
+<!--<td>{{rest.id}}</td>-->
+<!--<td>-->
+<!--<a href="#/detail/{{rest.id}}">{{rest.name}}</a>-->
+<!--</td>-->
+<!--<td><img ng-src="{{rest.rating_img_url}}"/></td>-->
+<!--<td><img ng-src="{{rest.image_url}}"/></td>-->
+<!--</tr>-->
+<!--</tbody>-->
+<!--</table>-->
+<!--</div>-->
 <!--</div>-->
 <div class="container">
     <div class="row text-center">
@@ -53,27 +53,19 @@
         </div>
     </div>
     <div class="row">
-        <!--<hr>-->
-        <!--<div class="col-xs-3">-->
-            <!--<p>Page 1 of 10</p>-->
-        <!--</div>-->
-        <!--<div class="col-xs-9 text-right">-->
-            <!--<p>1 2 3 4 5 6 Next ></p>-->
-        <!--</div>-->
-        <!--<hr>-->
-        <nav>
-            <ul class="pager">
-                <li class="previous">
-                    <a href="" ng-disabled="showPrevious == false || totalResponse <= 10"
-                       ng-click="previousPage()">
-                        <span aria-hidden="true">&larr;</span>
-                        Previous</a></li>
-                <li class="next">
-                    <a href="" ng-disabled="showNext == false || totalResponse <= 10"
-                       ng-click="nextPage()">
-                        Next<span aria-hidden="true">&rarr;</span>
-                    </a></li>
-            </ul>
-        </nav>
+        <hr>
+       <div class="col-xs-6 col-sm-6">
+           <a class="btn btn-sm btn-info" href=""
+            ng-click="previousPage()"
+           ng-disabled="showPrevious == false || totalResponse <= 10">
+            <i class="fa fa-long-arrow-left" aria-hidden="true"></i> Previous</a>
+       </div>
+
+        <div class="col-xs-6 col-sm-6">
+            <a class="btn btn-sm btn-info pull-right" href=""
+           ng-click="nextPage()"
+           ng-disabled="showNext == false || totalResponse <= 10">
+            Next <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+        </div>
     </div>
 </div>
