--- a/public/project-next/client/views/search/searchresult.view.html
+++ b/public/project-next/client/views/search/searchresult.view.html
@@ -33,13 +33,13 @@
                 ?endIndex-10-startIndex:totalResponse}} of {{totalResponse}}</p>
         </div>
     </div>
-    <div class="row" ng-repeat="rest in data.businesses|limitTo:endIndex |limitTo:startIndex" ng-if="$index >= 1">
+    <div class="row" ng-repeat="rest in data.businesses|limitTo:endIndex |limitTo:startIndex">
         <hr>
         <div class="col-xs-3 col-sm-2 text-center">
             <img ng-src="{{rest.image_url}}"/>
         </div>
         <div class="col-xs-6 col-sm-5 txtright">
-            <div class="row">{{$index}}. <a href="#/detail/{{rest.id}}">{{rest.name}}</a></div>
+            <div class="row"><i class="fa fa-cutlery" aria-hidden="true"></i> <a href="#/detail/{{rest.id}}">{{rest.name}}</a></div>
             <div class="row"><p><img ng-src="{{rest.rating_img_url}}"/> {{rest.review_count}} Reviews</p></div>
             <div class="row"><p>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</p></div>
             <div class="row visible-xs"><p>{{rest.location.address[0]}}, {{rest.location.city}}</p></div>
