Worked on improving UI for likes and reviews

--- a/public/project-next/client/views/users/likes.view.html
+++ b/public/project-next/client/views/users/likes.view.html
@@ -34,17 +34,33 @@
         <h1>Liked Restaurants</h1>
         <hr>
         <div class="col-xs-12">
-            <div class="row" ng-repeat="rest in likeControllerModel.restaurants">
-                <div class="col-sm-3">
-                    <div class="text-center">
-                        <img ng-src="{{rest.imageUrl}}" class="img-responsive" alt="restaurant"/>
-                    </div>
-                    <hr>
-                </div>
-                <div class="col-sm-9">
-                    <p class="lead"><a href="#/detail/{{rest._id}}">{{rest.name}}</a></p>
-                    <div class="row">
-                        <div class="col-xs-8">
+            <div class="row">
+                <!--<div class="col-sm-3">-->
+                    <!--<div class="text-center">-->
+                        <!--<img ng-src="{{rest.imageUrl}}" class="img-responsive" alt="restaurant"/>-->
+                    <!--</div>-->
+                    <!--<hr>-->
+                <!--</div>-->
+                <!--<div class="col-sm-9">-->
+                    <!--<p class="lead"><a href="#/detail/{{rest._id}}">{{rest.name}}</a></p>-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-8">-->
+                            <!--<a ng-hide="rest.isLiked" href=""-->
+                               <!--ng-click="likeControllerModel.likeRest(rest)">-->
+                                <!--<i title="Like" class="fa fa-thumbs-o-up fa-lg"></i></a>-->
+                            <!--<a ng-if="rest.isLiked" href=""-->
+                               <!--ng-click="likeControllerModel.undolikeRest(rest)">-->
+                                <!--<i title="Unlike" class="fa fa-thumbs-o-up fa-lg orangecolor"></i></a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="col-sm-6 col-md-4 rest-container" ng-repeat="rest in likeControllerModel.restaurants">
+                    <div class="thumbnail">
+                        <a href="">
+                            <img class="img-responsive" ng-src="{{rest.imageUrl}}"/>
+                        </a>
+                        <div class="caption text-center">
+                            <p class="lead"><a href="#/detail/{{rest._id}}">{{rest.name}}</a></p>
                             <a ng-hide="rest.isLiked" href=""
                                ng-click="likeControllerModel.likeRest(rest)">
                                 <i title="Like" class="fa fa-thumbs-o-up fa-lg"></i></a>
