worked on improving the UI of user profile

--- a/public/project-next/client/views/users/followers.view.html
+++ b/public/project-next/client/views/users/followers.view.html
@@ -3,7 +3,8 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#/{{followersControllerModel.userId}}/profile">My Profile</a>
+                <a href="#/{{followersControllerModel.userId}}/profile">
+                    {{followersControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
                 <a href="#/{{followersControllerModel.userId}}/profile/reviews">Overview</a>
