--- a/public/project-next/client/views/users/likes.view.html
+++ b/public/project-next/client/views/users/likes.view.html
@@ -3,13 +3,11 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#/{{likeControllerModel.userId}}/profile">My Profile</a>
+                <a href="#/{{likeControllerModel.userId}}/profile">
+                    {{likeControllerModel.profileUser.username}}Profile</a>
             </li>
             <li>
                 <a href="#/{{likeControllerModel.userId}}/profile/reviews">Overview</a>
-            </li>
-            <li>
-                <a href="">Favorite Places</a>
             </li>
             <li>
                 <a href="#/{{likeControllerModel.userId}}/profile/likes">Likes</a>
