--- a/public/project-next/client/views/users/profile.view.html
+++ b/public/project-next/client/views/users/profile.view.html
@@ -3,13 +3,11 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#/{{profileControllerModel.userId}}/profile">My Profile</a>
+                <a href="#/{{profileControllerModel.userId}}/profile">
+                    {{profileControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
-                <a href="#/{{profileControllerModel.userId}}/profile/reviews">Overview</a>
-            </li>
-            <li>
-                <a href="">Favorite Places</a>
+                <a href="#/{{profileControllerModel.userId}}/profile/reviews">Reviews</a>
             </li>
             <li>
                 <a href="#/{{profileControllerModel.userId}}/profile/likes">Likes</a>
@@ -42,14 +40,14 @@
                         <h6>Upload a different photo...</h6>
 
                         <input type="file" class="form-control">
-                        <a ng-hide="profileControllerModel.isfollowed" href=""
-                           ng-click="profileControllerModel.followUser(profileControllerModel.userId)">
-                            <i title="Follow" class="fa fa-user-plus fa-lg"></i>
-                        </a>
-                        <a ng-if="profileControllerModel.isfollowed" href=""
-                           ng-click="profileControllerModel.unFollowUser(profileControllerModel.userId)">
-                            <i title="UnFollow" class="fa fa-user-plus fa-lg orangecolor"></i>
-                        </a>
+                        <!--<a ng-hide="profileControllerModel.isfollowed" href=""-->
+                           <!--ng-click="profileControllerModel.followUser(profileControllerModel.userId)">-->
+                            <!--<i title="Follow" class="fa fa-user-plus fa-lg"></i>-->
+                        <!--</a>-->
+                        <!--<a ng-if="profileControllerModel.isfollowed" href=""-->
+                           <!--ng-click="profileControllerModel.unFollowUser(profileControllerModel.userId)">-->
+                            <!--<i title="UnFollow" class="fa fa-user-plus fa-lg orangecolor"></i>-->
+                        <!--</a>-->
                     </div>
                 </div>
                 <!-- edit form column -->
