made the links active in sidebar

--- a/public/project-next/client/views/users/followers.view.html
+++ b/public/project-next/client/views/users/followers.view.html
@@ -12,7 +12,7 @@
             <li>
                 <a href="#/{{followersControllerModel.userId}}/profile/likes">Likes</a>
             </li>
-            <li>
+            <li ng-class="{'active': followersControllerModel.$location.url() == '/{{followersControllerModel.userId}}/profile/followers'}">
                 <a href="#/{{followersControllerModel.userId}}/profile/followers">Followers</a>
             </li>
             <li>
