--- a/public/project-next/client/css/sidebar.css
+++ b/public/project-next/client/css/sidebar.css
@@ -76,9 +76,29 @@
     background: rgba(255,255,255,0.2);
 }
 
+/*.sidebar-nav li a:active,*/
+/*.sidebar-nav li a:focus {*/
+    /*text-decoration: none;*/
+/*}*/
+
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
-    text-decoration: none;
+    color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav > .active > a,
+.sidebar-nav > .active > a:hover,
+.sidebar-nav > .active > a:focus {
+    color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav > .disabled > a,
+.sidebar-nav > .disabled > a:hover,
+.sidebar-nav > .disabled > a:focus {
+    color: #999999;
+    background-color: transparent;
 }
 
 .sidebar-nav > .sidebar-brand {
@@ -87,9 +107,9 @@
     line-height: 60px;
 }
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
+/*.sidebar-nav > .sidebar-brand a {*/
+    /*color: #999999;*/
+/*}*/
 
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
