--- a/public/project-next/client/views/users/following.view.html
+++ b/public/project-next/client/views/users/following.view.html
@@ -15,7 +15,7 @@
             <li>
                 <a href="#/{{followingControllerModel.userId}}/profile/followers">Followers</a>
             </li>
-            <li>
+            <li ng-class="{'active': followingControllerModel.$location.url() == '/{{followingControllerModel.userId}}/profile/following'}">
                 <a href="#/{{followingControllerModel.userId}}/profile/following">Following</a>
             </li>
         </ul>
