--- a/public/project-next/client/views/users/likes.view.html
+++ b/public/project-next/client/views/users/likes.view.html
@@ -4,12 +4,12 @@
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
                 <a href="#/{{likeControllerModel.userId}}/profile">
-                    {{likeControllerModel.profileUser.username}}Profile</a>
+                    {{likeControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
-                <a href="#/{{likeControllerModel.userId}}/profile/reviews">Overview</a>
+                <a href="#/{{likeControllerModel.userId}}/profile/reviews">Reviews</a>
             </li>
-            <li>
+            <li ng-class="{'active': likeControllerModel.$location.url() == '/{{likeControllerModel.userId}}/profile/likes'}">
                 <a href="#/{{likeControllerModel.userId}}/profile/likes">Likes</a>
             </li>
             <li>
