Added get direction feature in search details page

--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -56,8 +56,8 @@
             <a ng-if="detailsControllerModel.isliked" href=""
                ng-click="detailsControllerModel.undolikeRest(detailsControllerModel.rest.id)">
                 <i title="Unlike" class="fa fa-thumbs-o-up fa-lg orangecolor"></i></a> &nbsp
-            <!--<i class="fa fa-thumbs-o-down fa-lg"></i>Dislike &nbsp-->
-            <i class="fa fa-bookmark fa-lg"></i>Save
+
+            <a target=_blank href="{{detailsControllerModel.directionUrl}}" >Get Directions</a>
             <hr>
         </div>
         <!--Map div-->
