--- a/public/assignment5/client/views/admin/admin.view.html
+++ b/public/assignment5/client/views/admin/admin.view.html
@@ -1,76 +1,129 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Admin</h1>
-            <h3 class="page-header">Users</h3>
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered">
-                    <tr>
-                        <th><span class="caret"></span> Username</th>
-                        <th><span class="caret"></span> Password</th>
-                        <th><span class="caret"></span> Role</th>
-                        <th>Actions</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="text" class="form-control text" placeholder="username">
-                        </td>
-                        <td>
-                            <input type="password" class="form-control" placeholder="password">
-                        </td>
-                        <td>
-                            <input type="text" class="form-control" placeholder="role1,role2">
-                        </td>
-                        <td>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            </a>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>alice</td>
-                        <td></td>
-                        <td>student</td>
-                        <td>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </a>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>bob</td>
-                        <td></td>
-                        <td>faculty | admin</td>
-                        <td>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </a>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>charlie</td>
-                        <td></td>
-                        <td></td>
-                        <td>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </a>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <h1 class="page-header">Admin</h1>
+    <h3 class="page-header">Users</h3>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th><span class="caret"></span> Username</th>
+                <th>Password</th>
+                <th><span class="caret"></span> FirstName</th>
+                <th><span class="caret"></span> LastName</th>
+                <th><span class="caret"></span> Roles</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <input type="text"
+                               ng-model = "model.user.username"
+                               class="form-control text"
+                               placeholder="Username"/>
+                    </td>
+                    <td>
+                        <input type="password"
+                               ng-model = "model.user.password"
+                               class="form-control text"
+                               placeholder="Password"/>
+                    </td>
+                    <td>
+                        <input type="text"
+                               ng-model = "model.user.firstName"
+                               class="form-control"
+                               placeholder="FirstName"/>
+                    </td>
+                    <td>
+                        <input type="text"
+                               ng-model = "model.user.lastName"
+                               class="form-control"
+                               placeholder="lastName"/>
+                    </td>
+                    <td>
+                        <input type="text"
+                                ng-model="model.user.roles"
+                                class="form-control"
+                                placeholder="roles"/>
+                    </td>
+                    <td>
+                        <button ng-click="model.addUser(model.user)"
+                                class="btn btn-sm btn-success">Add</button>
+                        <button ng-click="model.updateUser(model.user)"
+                                class="btn btn-sm btn-primary">Update</button>
+                    </td>
+                </tr>
+                <tr ng-repeat="user in model.users">
+                    <td>{{user.username}}</td>
+                    <td>*****</td>
+                    <td>{{user.firstName}}</td>
+                    <td>{{user.lastName}}</td>
+                    <td>{{user.roles}}</td>
+                    <td>
+                        <button ng-click="model.deleteUser($index)"
+                                class="btn btn-sm btn-danger">Delete</button>
+                        <button ng-click="model.selectUser($index)"
+                                class="btn btn-sm btn-info">Select</button>
+                    </td>
+                </tr>
+            </tbody>
+            <!--<tr>-->
+                <!--<td>-->
+                    <!--<input type="text" class="form-control text" placeholder="username">-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--<input type="password" class="form-control" placeholder="password">-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--<input type="text" class="form-control" placeholder="role1,role2">-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td>alice</td>-->
+                <!--<td></td>-->
+                <!--<td>student</td>-->
+                <!--<td>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td>bob</td>-->
+                <!--<td></td>-->
+                <!--<td>faculty | admin</td>-->
+                <!--<td>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td>charlie</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                    <!--<a href="#">-->
+                        <!--<span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true"></span>-->
+                    <!--</a>-->
+                <!--</td>-->
+            <!--</tr>-->
+        </table>
     </div>
 </div>
