--- a/public/project-next/client/views/users/profile.view.html
+++ b/public/project-next/client/views/users/profile.view.html
@@ -38,9 +38,13 @@
                 <div class="col-md-3">
                     <div class="text-center">
                         <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-                        <h6>Upload a different photo...</h6>
-
-                        <input type="file" class="form-control">
+                        <h6>Upload a different photo.</h6>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
+                                <input type="file" class="form-control" name="profilePic" placeholder="Profile Photo">
+                            </div>
+                        </div>
                         <!--<a ng-hide="profileControllerModel.isfollowed" href=""-->
                            <!--ng-click="profileControllerModel.followUser(profileControllerModel.userId)">-->
                             <!--<i title="Follow" class="fa fa-user-plus fa-lg"></i>-->
